// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskList should render empty correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TaskList
    closeTask={null}
    deleteTask={null}
    openTask={null}
    tasks={Array []}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <styled.section>
        You don't have any tasks. Start by clicking "Add Task"!
      </styled.section>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "You don't have any tasks. Start by clicking \\"Add Task\\"!",
      },
      "ref": null,
      "rendered": "You don't have any tasks. Start by clicking \\"Add Task\\"!",
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <styled.section>
          You don't have any tasks. Start by clicking "Add Task"!
        </styled.section>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "You don't have any tasks. Start by clicking \\"Add Task\\"!",
        },
        "ref": null,
        "rendered": "You don't have any tasks. Start by clicking \\"Add Task\\"!",
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`TaskList should render tasks correctly 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <TaskList
    closeTask={null}
    deleteTask={null}
    openTask={null}
    tasks={
      Array [
        Object {
          "id": "id1",
          "text": "Buy milk",
        },
        Object {
          "id": "id2",
          "text": "Walk the dog",
        },
        Object {
          "id": "id3",
          "text": "Task",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Task
          closeTask={[Function]}
          deleteTask={[Function]}
          isOpened={false}
          openTask={[Function]}
          text="Buy milk"
        />,
        <Task
          closeTask={[Function]}
          deleteTask={[Function]}
          isOpened={false}
          openTask={[Function]}
          text="Walk the dog"
        />,
        <Task
          closeTask={[Function]}
          deleteTask={[Function]}
          isOpened={false}
          openTask={[Function]}
          text="Task"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "id1",
        "nodeType": "function",
        "props": Object {
          "closeTask": [Function],
          "deleteTask": [Function],
          "isOpened": false,
          "openTask": [Function],
          "text": "Buy milk",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "id2",
        "nodeType": "function",
        "props": Object {
          "closeTask": [Function],
          "deleteTask": [Function],
          "isOpened": false,
          "openTask": [Function],
          "text": "Walk the dog",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "id3",
        "nodeType": "function",
        "props": Object {
          "closeTask": [Function],
          "deleteTask": [Function],
          "isOpened": false,
          "openTask": [Function],
          "text": "Task",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Task
            closeTask={[Function]}
            deleteTask={[Function]}
            isOpened={false}
            openTask={[Function]}
            text="Buy milk"
          />,
          <Task
            closeTask={[Function]}
            deleteTask={[Function]}
            isOpened={false}
            openTask={[Function]}
            text="Walk the dog"
          />,
          <Task
            closeTask={[Function]}
            deleteTask={[Function]}
            isOpened={false}
            openTask={[Function]}
            text="Task"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "id1",
          "nodeType": "function",
          "props": Object {
            "closeTask": [Function],
            "deleteTask": [Function],
            "isOpened": false,
            "openTask": [Function],
            "text": "Buy milk",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "id2",
          "nodeType": "function",
          "props": Object {
            "closeTask": [Function],
            "deleteTask": [Function],
            "isOpened": false,
            "openTask": [Function],
            "text": "Walk the dog",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "id3",
          "nodeType": "function",
          "props": Object {
            "closeTask": [Function],
            "deleteTask": [Function],
            "isOpened": false,
            "openTask": [Function],
            "text": "Task",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
